[package]
name = "manus"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
tokio = { version = "1.48.0", features = ["full"] }
dotenv = "0.15.0"
futures = "0.3.31"
axum = "0.8.7"
ics = "0.5.8"
chrono = "0.4.42"
uuid = { version = "1.18.1", features = ["v4"] }
chrono-tz = "0.10.4"
